manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecommerce-ingress
  namespace: ecommerce
spec:
  ingressClassName: nginx
  rules:
    - host: ecommerce.local
      http:
        paths:
          - path: /orders
            pathType: Prefix
            backend:
              service:
                name: order-service
                port:
                  number: 3001
          - path: /order-health
            pathType: Prefix
            backend:
              service:
                name: order-service
                port:
                  number: 3001
          - path: /payment-health
            pathType: Prefix
            backend:
              service:
                name: payment-service
                port:
                  number: 3002
